# GraphicsProject--Try

./: .gitignore  CMakeLists.txt  README.md  dashboard_standalone.html  global.d.ts  index.html  launch_aether.ps1  launch_dashboard.ps1  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Engine/AI/: AetherAIOptimizer.hpp
Engine/Biome/: BiomeSystem.hpp  ClimateSystem.hpp
Engine/Camera/: Camera.hpp  FreeFlyCamera.hpp  ThirdPersonCamera.hpp
Engine/Core/: Application.hpp  Database.hpp  DigitalTwinManager.hpp  StreamingManager.hpp
Engine/ECS/: ECS.hpp
Engine/Renderer/: Atmosphere.hpp  AtmosphereManager.hpp  BindlessTextureManager.hpp  CASController.hpp  CascadedShadowSystem.hpp  CloudManager.hpp  GBuffer.hpp  IndirectRenderer.hpp  OceanManager.hpp  PostProcessSystem.hpp  RenderSystem.hpp  SSAOManager.hpp  SSGIManager.hpp  SSRManager.hpp  Shader.hpp  ShadowManager.hpp  TemporalSystem.hpp  VolumetricCloudSystem.hpp  VolumetricFogManager.hpp
Engine/Terrain/: EnvironmentGenerator.hpp  (+5 more)
GUI/: AetherEngineWorldControlPanel.tsx  lucide-react.d.ts
public/: manifest.webmanifest
shaders/: cas.comp  climate.comp  clouds.frag  culling.comp  erosion.comp  foliage.vert  foliage_bending.vert  froxel_injection.comp  hydrology.comp  ocean_fft.comp  ocean_ifft.comp  ocean_vertex_update.comp  pbr.frag  sky.frag  ssao.frag  ssao_blur.frag  ssgi.comp  ssr.comp  taa.frag  terrain.frag  terrain.vert  volumetric_clouds.comp  volumetric_resolve.frag  water.frag  weather.comp
src/: index.css  main.cpp  main.tsx
tools/: verify-dashboard-components.mjs
(+12 files in other folders)
